# jonaylor.com

./: .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sqlx-data.json  turbo.json
.github/: FUNDING.yml
.github/workflows/: biome.yml  build.yml  email-newsletter.yml  hub.yml
.sqlx/: query-1249204eab4e98716e75374f142b809614db24a4d7ffde04b1f09890f4dec1d2.json  query-2c04cc8328ad0018c2cb8b4d010800430ca283284b00ffe419e7ab973c85390d.json  query-3c7feb3e3c37e1690b7835d33e08483e456b513c17b5a3ab133e52daa1cbf2b0.json  query-75d8dd03badb22fa013268a308e3742d0bde6810f7745152f7cd3a9a6af3b1f4.json  query-af5309afcb8a2b10f7c964daca7b60853581ded4cddcf0c1aaefaa4098b051ae.json
apps/blog/: .gitignore  AGENTS.md  BLOG_USAGE.md  astro.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
apps/blog/docs/: BLOG_USAGE.md  IMAGE_GUIDE.md  SEO_IMPLEMENTATION.md
apps/blog/public/: robots.txt
apps/blog/scripts/: optimize-images.ts
apps/blog/tests/: feeds.spec.ts  home.spec.ts  post-navigation.spec.ts
apps/bryansbirthday/: package.json  receipt.json  wrangler.toml
apps/bryansbirthday/.astro/: settings.json
apps/gm/: index.html  package.json
apps/intheloopstudio/: .gitignore  README.md  astro.config.mjs  package.json  wrangler.toml
apps/intheloopstudio/public/: robots.txt  sitemap.xml
apps/intheloopstudio/src/: styles.css
apps/linktree/: .gitignore  astro.config.mjs  next.config.ts  package.json  playwright.config.ts
apps/linktree/.astro/: content-assets.mjs  content.d.ts  data-store.json  settings.json
apps/linktree/.old-nextjs/: Header.tsx
apps/linktree/tests/: animations.spec.ts  home.spec.ts  layout.spec.ts  seo.spec.ts  theme.spec.ts
apps/pngdb/: README.md  index.html  package.json  vite.config.js  wrangler.toml
apps/pngdb/public/: app.js
apps/redirects/: package.json  tsconfig.json  wrangler.toml
apps/redirects/src/: index.ts
apps/resume/: package.json
apps/resume/css/: resume.css  typeplate.css
apps/resume/js/: PDFreactor.js  bootstrap.js  bootstrap.min.js  helper-functions.js  jquery-3.1.1.min.js  knockout-3.4.0.js  resume.js  tether.min.js
apps/rvamusiccalendar/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
apps/rvamusiccalendar/src/: env.d.ts
apps/rvaremix/: .gitignore  README.md  package.json  tailwind.config.cjs  wrangler.toml
apps/rvaremix/.astro/: settings.json
apps/site/: .gitignore  README.md  astro.config.mjs  package.json  playwright.config.ts  redirects.json  vercel.json  wrangler.toml
apps/site/scripts/: generate-redirects.ts
apps/site/src/: content.config.ts
apps/site/tests/: newsletter-signup.spec.ts
apps/www/: index.html  needle_movers.html  package.json  robots.txt  sitemap.xml  user_manual.html
configuration/: base.yaml
migrations/: 20220707150811_create_subscriptions_table.sql  20220710151724_add_status_to_subscriptions.sql  20220710151937_make_status_not_null_in_subscriptions.sql  20220710152059_create_subscription_tokens_table.sql  20220711043545_remove_salt_from_users.sql  20220712014343_seed_user.sql  20220717030344_relax_null_checks_on_idempotency.sql
services/email_newsletter/: .gitignore  CONTRIBUTING.md  Cargo.toml  TODO.md
services/email_newsletter/.sqlx/: query-0a905e3d50b151c420e3e98192a75caf3544491c0566a8c1527cd191d9b75c7f.json  query-107ca1aa539f8f01ddd2cc186a78a8ac5f8c1906b23808619b67eb1f14d6ccf1.json  query-13002884a4875bf09aeb686943d01fc12f95cb8e4fda4376a4ce6e61dc700119.json  query-266e0a5f7d002179d38470c9cf2149bb1b46c1bdafcce0f80a4000143ed9e20d.json  query-42987f03121308923b899a04b54ecf01d1a7c52bcebf5d445d13f614e14b08f2.json  query-4b5d71163c062e5819c0dcf7ef0d492b051c711ac400c1487456a3e571f443b9.json  query-4f368d9145fedefe27df07a8a877ed1c335699eedfd536d50778a3eb22117e8d.json  query-57dcf8277383d5ba14ed1d2fdb740a09afe1eacec0c37af1bce901f0e8c6abd7.json  query-71ef1931412b6725d4595bd55d1ff4484e9f20dbf790d7a3faa860eb9039b6b1.json  query-86f88b6bb622f2711adf15029c35b32b25b76818ef610a73b9a51dba8bc1b0e9.json  query-9ab6536d2bf619381573b3bf13507d53b2e9cf50051e51c803e916f25b51abd2.json  query-a2ead580d67f17a3e198225fcd8332fd6a12fd68626176c561b1974944f02b8e.json  query-dd95c843a7fdfaf6cdebda187447d0ecc73074a8b3b5d3f0beca315778b73fee.json  query-eeaecf0afd8ba8e677894db755bcf46d0c930d9367a1dd6cd6f1d7bfc2ce5ca8.json
services/email_newsletter/configuration/: base.yaml  (+1 more)
services/hub/: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
src/: authentication.rs  configuration.rs  email_client.rs  email_templates.rs  issue_delivery_queue.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs  web_templates.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  password.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: api.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
templates/emails/: blog_post.html  confirmation.html  confirmation.txt
templates/web/: admin_dashboard.html  change_password.html  login.html  newsletters_form.html  unsubscribe.html
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
(+404 files in other folders)
