[package]
edition = "2021"
name = "email_newsletter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "email_newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.19"
claim = "0.5.0"
config = "0.13.1"
fake = "~2.3"
once_cell = "1.13.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = {version = "0.11.11", default-features = false, features = ["json", "rustls"]}
secrecy = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0.138", features = ["derive"]}
serde-aux = "3.1.0"
tokio = {version = "1.19.2", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1.35", features = ["log"]}
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.14", features = [
  "registry",
  "env-filter",
]}
unicode-segmentation = "1.9.0"
uuid = {version = "1.1.2", features = ["v4"]}
validator = "0.15.0"
linkify = "0.8.1"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.31"
anyhow = "1.0.58"
base64 = "0.13.0"
argon2 = { version = "0.4.1", features = ["std"] }

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6"

[dev-dependencies]
serde_json = "1.0.82"
wiremock = "0.5.13"
