[package]
edition = "2021"
name = "email_newsletter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "email_newsletter"
path = "src/main.rs"

[dependencies]
actix-session = {version = "0.7.0", features = ["redis-rs-tls-session"]}
actix-web = "4.1.0"
actix-web-flash-messages = {version = "0.4.1", features = ["cookies"]}
anyhow = "1.0.58"
argon2 = {version = "0.4.1", features = ["std"]}
askama = "0.12"
base64 = "0.13.0"
chrono = "0.4.19"
claim = "0.5.0"
config = "0.13.1"
fake = "~2.3"
hex = "0.4.3"
hmac = {version = "0.12.1", features = ["std"]}
htmlescape = "0.3.1"
linkify = "0.8.1"
once_cell = "1.13.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = {version = "0.8.5", features = ["std_rng"]}
reqwest = {version = "0.11.11", default-features = false, features = [
  "json",
  "rustls",
  "cookies",
]}
secrecy = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0.138", features = ["derive"]}
serde-aux = "3.1.0"
serde_json = "1.0.82"
sha2 = "0.10.2"
thiserror = "1.0.31"
tokio = {version = "1.19.2", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1.35", features = ["log"]}
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.14", features = [
  "registry",
  "env-filter",
]}
unicode-segmentation = "1.9.0"
urlencoding = "2.1.0"
uuid = {version = "1.1.2", features = ["v4", "serde"]}
validator = "0.15.0"
actix-web-lab = "0.16.4"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6"

[dev-dependencies]
serde_json = "1.0.82"
serde_urlencoded = "0.7.1"
wiremock = "0.5.13"
