[package]
edition = "2021"
name = "email_newsletter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "email_newsletter"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
async-trait = "0.1.80"
tower-sessions = { version = "0.14.0", features = ["axum-core", "private"] }
tower-sessions-redis-store = { version = "0.16.0", features = ["enable-rustls"] }
http-body-util = "0.1.2"
http = "1.1.0"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace"] }
time = "0.3.45"
anyhow = "1.0.100"
argon2 = {version = "0.4.1", features = ["std"]}
askama = "0.12"
base64 = "0.13.1"
chrono = "0.4.42"
claim = "0.5.0"
config = "0.13.4"
fake = "~2.3"
hex = "0.4.3"
hmac = {version = "0.12.1", features = ["std"]}
htmlescape = "0.3.1"
linkify = "0.8.1"
once_cell = "1.21.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = {version = "0.8.5", features = ["std_rng"]}
reqwest = {version = "0.11.27", default-features = false, features = [
  "json",
  "rustls",
  "cookies",
]}
secrecy = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0.228", features = ["derive"]}
serde-aux = "3.1.0"
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "1.0.69"
tokio = {version = "1.49", features = ["macros", "rt-multi-thread", "net"]}
tracing = {version = "0.1.44", features = ["log"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.1.4"
tracing-subscriber = {version = "0.3.22", features = [
  "registry",
  "env-filter",
]}
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = {version = "1.19.0", features = ["v4", "serde"]}
validator = "0.15.0"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
version = "^0.8"

[dev-dependencies]
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
wiremock = "0.5.22"
